--- a/openshift/backend.deploy.yaml
+++ b/openshift/backend.deploy.yaml
@@ -164,7 +164,13 @@ objects:
           args:
           - -config.file=/etc/promtail/promtail.yaml
           - -client.url=http://loki:3100/api/prom/push
-          - -client.external-labels=pod=$(HOSTNAME)
+          - -client.external-labels=pod=$(PODNAME)
+          env:
+            - name: PODNAME
+              valueFrom:
+                fieldRef:
+                  apiVersion: v1
+                  fieldPath: metadata.name
           volumeMounts:
           - name: logging
             mountPath: /app/.log/
