--- a/openshift/monitoring/loki.yaml
+++ b/openshift/monitoring/loki.yaml
@@ -33,12 +33,13 @@ objects:
         - job_name: system          
           pipeline_stages:
             - match:
-                selector: '{component="api"} |~ ".*GET .health HTTP.*"'
+                selector: '{app="wally"} |~ ".*GET .health HTTP.*"'
                 action: drop    
           static_configs:
             - targets:
                 - localhost
               labels:
+                app: wally
                 job: wally               
                 component: api              
                 __path__: /app/.log/error.log
