--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "material-design-icons-iconfont": "^5.0.1",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
+    "vue-plotly": "^1.0.1",
     "vue-router": "^3.0.3",
     "vuetify": "^2.1.1",
     "vuex": "^3.0.1"
