--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "babel-jest": "^23.6.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jest-canvas-mock": "^2.2.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.3.1",
     "stylus": "^0.54.5",
