fix dockerfile (extra slash)

--- a/imports/Dockerfile
+++ b/imports/Dockerfile
@@ -7,7 +7,7 @@ RUN useradd wally -M -G root -u 1021 && chmod -R 775 /dataload \
                                           build-essential libsqlite3-dev zlib1g-dev postgresql-client \
   && rm -rf /var/lib/apt/lists/* \
   && curl -O https://dl.min.io/client/mc/release/linux-amd64/mc \
-  && chmod +x mc \ && cp mc /usr/local/bin/mc \
+  && chmod +x mc && cp mc /usr/local/bin/mc \
   && mkdir -p /dataload/tmp/tippecanoe-src \
   && git clone https://github.com/mapbox/tippecanoe.git /dataload/tmp/tippecanoe-src \
   && cd /dataload/tmp/tippecanoe-src && make && make install && cd /dataload && rm -rf /dataload/tmp/tippecanoe-src \
