--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "@mdi/font": "^4.4.95",
     "@turf/bbox": "^6.0.1",
+    "@turf/bbox-polygon": "^6.0.1",
     "@turf/circle": "^6.0.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
@@ -30,6 +31,7 @@
     "mapbox-gl": "^1.3.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
+    "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-chartjs": "^3.4.2",
     "vue-plotly": "^1.0.1",
