--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -21,6 +21,6 @@ jobs:
       run: |
         cd frontend
         npm ci
-        npm test:unit
+        npm run test:unit
       env:
         CI: true
