Redirect non-secure route to secure (http to https)

--- a/openshift/gatekeeper.deploy.yaml
+++ b/openshift/gatekeeper.deploy.yaml
@@ -182,6 +182,7 @@ objects:
     spec:
       host: "${HOST}"
       tls:
+        insecureEdgeTerminationPolicy: Redirect
         termination: edge
       to:
         kind: Service
