--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mdi/font": "^4.4.95",
     "@turf/bbox": "^6.0.1",
     "@turf/bbox-polygon": "^6.0.1",
+    "@turf/buffer": "^5.1.5",
     "@turf/circle": "^6.0.1",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
