--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@turf/bbox-polygon": "^6.0.1",
     "@turf/buffer": "^5.1.5",
     "@turf/circle": "^6.0.1",
+    "@turf/union": "^6.0.3",
     "axios": "^0.19.0",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
