Cleaned up docker-compose files

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 COMPOSE_PATH_SEPARATOR=:
-COMPOSE_FILE=docker-compose.dev.yml
+# COMPOSE_FILE=docker-compose.dev.yml
 
 DOMAIN=localhost
 # DOMAIN=dev.wally.pathfinder.gov.bc.ca
