--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -22,5 +22,9 @@ jobs:
         cd frontend
         npm ci
         npm run test:unit
+    - name: Run lint
+      run: |
+        cd frontend
+        npm run lint
       env:
         CI: true
