--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -247,4 +247,6 @@ requests:
         elevation_profile.[0].distance_from_origin: 0 # the first 
         elevation_profile.[0].elevation:
           gt: 500 # all elevations in Whistler should be greater than 500, this is just a sanity check
+        surface.[0]:
+          exists: true
 
