Moved Licences to api/v1

--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -81,7 +81,7 @@ requests:
     expect:
       status: 422
   - name: Licence radius search
-    url: "{{host}}/api/v1/analysis/licences/nearby?radius=1000&&point=%5B-122.90700522356728%2C49.31036202688435%5D"
+    url: "{{host}}/api/v1/licences/nearby?radius=1000&&point=%5B-122.90700522356728%2C49.31036202688435%5D"
     method: get
     expect:
       status: 200
