--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -234,7 +234,7 @@ requests:
         display_data.[1].layer: fn_treaty_areas
         display_data.[2].layer: fn_community_locations
   - name: Cross section endpoint, across Whistler data set
-    url: "{{host}}/api/v1/analysis/wells/section?radius=200&line=%5B%5B-122.96377711531765%2C50.10780689347729%5D%2C%5B-122.93100834718146%2C50.15894819669609%5D%5D"
+    url: "{{host}}/api/v1/wells/section?radius=200&line=%5B%5B-122.96377711531765%2C50.10780689347729%5D%2C%5B-122.93100834718146%2C50.15894819669609%5D%5D"
     method: get
     expect:
       status: 200
