--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,8 @@
     "@sentry/integrations": "^5.8.0",
     "@turf/bbox": "^6.0.1",
     "@turf/bbox-polygon": "^6.0.1",
-    "@turf/centroid": "^6.0.2",
     "@turf/buffer": "^5.1.5",
+    "@turf/centroid": "^6.0.2",
     "@turf/circle": "^6.0.1",
     "@turf/union": "^6.0.3",
     "axios": "^0.19.0",
@@ -31,8 +31,8 @@
     "leaflet-geosearch": "^2.7.0",
     "leaflet-lasso": "^2.0.4",
     "leaflet.locatecontrol": "^0.67.0",
-    "lodash": "^4.17.15",
     "lodash.debounce": "^4.0.8",
+    "lodash.unionby": "^4.8.0",
     "mapbox-gl": "^1.3.0",
     "mapbox-gl-draw-rectangle-mode": "^1.0.4",
     "material-design-icons-iconfont": "^5.0.1",
