cross section tools, download plot/map, selection based labels

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.6.5",
     "esri-leaflet": "^2.2.4",
+    "file-saver": "^2.0.2",
+    "html2canvas": "^1.0.0-rc.5",
     "keycloak-js": "^6.0.1",
     "leaflet": "^1.5.1",
     "leaflet-fullscreen": "^1.0.2",
