--- a/openshift/frontend.build.yaml
+++ b/openshift/frontend.build.yaml
@@ -31,11 +31,11 @@ objects:
       postCommit: {}
       resources:
         limits:
-          cpu: '4'
-          memory: 8Gi
-        requests:
-          cpu: '1'
+          cpu: '2'
           memory: 4Gi
+        requests:
+          cpu: 500m
+          memory: 2Gi
       runPolicy: SerialLatestOnly
       source:
         contextDir: frontend
