--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -282,7 +282,7 @@ requests:
     expect:
       status: 200
   - name: Watersheds available at point
-    url: "{{host}}/api/v1/watersheds?point=%5B-122.99920612772564%2C50.09566411230176%5D"
+    url: "{{host}}/api/v1/watersheds/?point=%5B-122.99920612772564%2C50.09566411230176%5D"
     method: get
     expect:
       status: 200
