--- a/env-postgres.env
+++ b/env-postgres.env
@@ -4,3 +4,4 @@ POSTGRES_SERVER=db
 POSTGRES_USER=wally
 POSTGRES_PASSWORD=test_pw
 POSTGRES_DB=wally
+DATABASE_URL=postgres://wally:test_pw@db:5432/wally
