change path for watershed endpoint tests

--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -287,12 +287,12 @@ requests:
     expect:
       status: 200
   - name: Watershed licences
-    url: "{{host}}/api/v1/watersheds/WHSE_BASEMAPPING.FWA_ASSESSMENT_WATERSHEDS_POLY.15091/licences"
+    url: "{{host}}/api/v1/watersheds/366533/licences"
     method: get
     expect:
       status: 200
   - name: Watershed details
-    url: "{{host}}/api/v1/watersheds/WHSE_BASEMAPPING.FWA_ASSESSMENT_WATERSHEDS_POLY.15091"
+    url: "{{host}}/api/v1/watersheds/366533"
     method: get
     expect:
       status: 200
