--- a/backend/api-tests/data_endpoints.apitest.yaml
+++ b/backend/api-tests/data_endpoints.apitest.yaml
@@ -286,6 +286,11 @@ requests:
     method: get
     expect:
       status: 200
+  - name: Watersheds available at point (second request)
+    url: "{{host}}/api/v1/watersheds/?point=%5B-122.99920612772564%2C50.09566411230176%5D"
+    method: get
+    expect:
+      status: 200
   # - name: Watershed licences
   #   url: "{{host}}/api/v1/watersheds/366533/licences"
   #   method: get
