working spreadsheet export

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
       PORT: 8000
       MAPBOX_ACCESS_TOKEN: "${MAPBOX_ACCESS_TOKEN}"
       MAPBOX_STYLE: "${MAPBOX_STYLE}"
+      COMMON_DOCGEN_CLIENT_ID: "${COMMON_DOCGEN_CLIENT_ID}"
+      COMMON_DOCGEN_CLIENT_SECRET: "${COMMON_DOCGEN_CLIENT_SECRET}"
+      COMMON_DOCGEN_SSO_ENDPOINT: "${COMMON_DOCGEN_SSO_ENDPOINT}"
+      COMMON_DOCGEN_ENDPOINT: "${COMMON_DOCGEN_ENDPOINT}"
     ports:
       - '8000:8000'
     depends_on: 
