--- a/backend/api-tests/models.apitest.yaml
+++ b/backend/api-tests/models.apitest.yaml
@@ -32,7 +32,7 @@ requests:
           exists: true
         avg_mm:
           exists: true
-  - name: SCSB2016 Test Case 1 - Stawamus River
+  - name: SCSB2016 Test Proof 1 - Stawamus River
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=953&glacial_coverage=0&annual_precipitation=3292&evapo_transpiration=668&drainage_area=51&solar_exposure=0.57&average_slope=26"
     method: get
     expect:
@@ -43,7 +43,7 @@ requests:
           gt: 77
         [0].model_result:
           lt: 79
-  - name: SCSB2016 Test Case 2 - Mashiter Creek
+  - name: SCSB2016 Test Proof 2 - Mashiter Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1096&glacial_coverage=0&annual_precipitation=3304&evapo_transpiration=666&drainage_area=42&solar_exposure=0.67&average_slope=19"
     method: get
     expect:
@@ -54,7 +54,7 @@ requests:
           gt: 77
         [0].model_result:
           lt: 79
-  - name: SCSB2016 Test Case 3 - Slesse Creek
+  - name: SCSB2016 Test Proof 3 - Slesse Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1320&glacial_coverage=0&annual_precipitation=2229&evapo_transpiration=648&drainage_area=165&solar_exposure=0.66&average_slope=31"
     method: get
     expect:
@@ -65,7 +65,7 @@ requests:
           gt: 49
         [0].model_result:
           lt: 51
-  - name: SCSB2016 Test Case 4 - Sumas River
+  - name: SCSB2016 Test Proof 4 - Sumas River
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=917&glacial_coverage=0&annual_precipitation=2010&evapo_transpiration=701&drainage_area=1617&solar_exposure=0.67&average_slope=23"
     method: get
     expect:
@@ -76,7 +76,7 @@ requests:
           gt: 50
         [0].model_result:
           lt: 52
-  - name: SCSB2016 Test Case 5 - Tahumming River
+  - name: SCSB2016 Test Proof 5 - Tahumming River
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1363&glacial_coverage=0.15&annual_precipitation=3482&evapo_transpiration=640&drainage_area=255&solar_exposure=0.59&average_slope=37"
     method: get
     expect:
@@ -87,7 +87,7 @@ requests:
           gt: 97
         [0].model_result:
           lt: 99
-  - name: SCSB2016 Test Case 6 - Lillooet River
+  - name: SCSB2016 Test Proof 6 - Lillooet River
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1528&glacial_coverage=0.1&annual_precipitation=1972&evapo_transpiration=640&drainage_area=5543&solar_exposure=0.63&average_slope=28"
     method: get
     expect:
@@ -98,7 +98,7 @@ requests:
           gt: 54
         [0].model_result:
           lt: 56
-  - name: SCSB2016 Test Case 7 - Millar Creek
+  - name: SCSB2016 Test Proof 7 - Millar Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=25&median_elevation=1694&glacial_coverage=0.24&annual_precipitation=2388&evapo_transpiration=609&drainage_area=77&solar_exposure=0.59&average_slope=24"
     method: get
     expect:
@@ -109,7 +109,7 @@ requests:
           gt: 41
         [0].model_result:
           lt: 43
-  - name: SCSB2016 Test Case 7 - Meslilloet Creek
+  - name: SCSB2016 Test Proof 8 - Meslilloet Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=27&median_elevation=1042&glacial_coverage=0.02&annual_precipitation=4098&evapo_transpiration=659&drainage_area=40&solar_exposure=0.62&average_slope=25"
     method: get
     expect:
@@ -120,3 +120,31 @@ requests:
           gt: 117
         [0].model_result:
           lt: 119
+  - name: Watersheds available at point (Stawamus River)
+    url: "{{host}}/api/v1/watersheds/?point=%5B-123.14608370256562%2C49.68977177141528%5D&include_self=false"
+    method: get
+    expect:
+      status: 200
+      type:
+        equals: FeatureCollection
+    set:
+      - var: watershed_id
+        from: "features.[0].id"
+  # Left as an example to test our own model using external api inputs
+  # - name: Watershed Information Test (Stawamus River)
+  #   url: "{{host}}/api/v1/watersheds/{{watershed_id}}"
+  #   method: get
+  #   expect:
+  #     status: 200
+  #     values:
+  #       hydrological_zone: 27
+  #       drainage_area:
+  #         gt: 51
+  #       drainage_area:
+  #         lt: 53
+  #       scsb2016_model.[0].output_type: MAR
+  #       scsb2016_model.[0].model_result:
+  #         gt: 45
+  #       scsb2016_model.[0].model_result:
+  #         lt: 55
+  
