--- a/backend/api-tests/models.apitest.yaml
+++ b/backend/api-tests/models.apitest.yaml
@@ -38,10 +38,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 77
-        [0].model_result:
+        result.[0].model_result:
           lt: 79
   - name: SCSB2016 Test Proof 2 - Mashiter Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1096&glacial_coverage=0&annual_precipitation=3304&evapo_transpiration=666&drainage_area=42&solar_exposure=0.67&average_slope=19"
@@ -49,10 +49,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 77
-        [0].model_result:
+        result.[0].model_result:
           lt: 79
   - name: SCSB2016 Test Proof 3 - Slesse Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1320&glacial_coverage=0&annual_precipitation=2229&evapo_transpiration=648&drainage_area=165&solar_exposure=0.66&average_slope=31"
@@ -60,10 +60,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 49
-        [0].model_result:
+        result.[0].model_result:
           lt: 51
   - name: SCSB2016 Test Proof 4 - Sumas River
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=917&glacial_coverage=0&annual_precipitation=2010&evapo_transpiration=701&drainage_area=1617&solar_exposure=0.67&average_slope=23"
@@ -71,10 +71,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 50
-        [0].model_result:
+        result.[0].model_result:
           lt: 52
   - name: SCSB2016 Test Proof 5 - Tahumming River
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1363&glacial_coverage=0.15&annual_precipitation=3482&evapo_transpiration=640&drainage_area=255&solar_exposure=0.59&average_slope=37"
@@ -82,10 +82,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 97
-        [0].model_result:
+        result.[0].model_result:
           lt: 99
   - name: SCSB2016 Test Proof 6 - Lillooet River
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=26&median_elevation=1528&glacial_coverage=0.1&annual_precipitation=1972&evapo_transpiration=640&drainage_area=5543&solar_exposure=0.63&average_slope=28"
@@ -93,10 +93,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 54
-        [0].model_result:
+        result.[0].model_result:
           lt: 56
   - name: SCSB2016 Test Proof 7 - Millar Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=25&median_elevation=1694&glacial_coverage=0.24&annual_precipitation=2388&evapo_transpiration=609&drainage_area=77&solar_exposure=0.59&average_slope=24"
@@ -104,10 +104,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 41
-        [0].model_result:
+        result.[0].model_result:
           lt: 43
   - name: SCSB2016 Test Proof 8 - Meslilloet Creek
     url: "{{host}}/api/v1/scsb2016/test?hydrological_zone=27&median_elevation=1042&glacial_coverage=0.02&annual_precipitation=4098&evapo_transpiration=659&drainage_area=40&solar_exposure=0.62&average_slope=25"
@@ -115,10 +115,10 @@ requests:
     expect:
       status: 200
       values:
-        [0].output_type: MAR
-        [0].model_result:
+        result.[0].output_type: MAR
+        result.[0].model_result:
           gt: 117
-        [0].model_result:
+        result.[0].model_result:
           lt: 119
   - name: Watersheds available at point (Stawamus River)
     url: "{{host}}/api/v1/watersheds/?point=%5B-123.14608370256562%2C49.68977177141528%5D&include_self=false"
