Wally version & environment info

--- a/env-backend.env
+++ b/env-backend.env
@@ -2,3 +2,5 @@ BACKEND_CORS_ORIGINS=http://localhost, http://localhost:4200, http://localhost:3
 PROJECT_NAME=Wally
 API_SERVICE=backend:8000
 WALLY_ENV=DEV
+API_VERSION=1
+WALLY_VERSION=1.0.0
