--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -1,6 +1,6 @@
 :8080
 
-root /app/src
+root * /app/src
 
 reverse_proxy /api/* {$WALLY_BACKEND_SERVICE}:8000
 reverse_proxy /docs/* {$WALLY_BACKEND_SERVICE}:8000
