--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -1,7 +1,11 @@
 :8080
 
 root * /app/src
-
+file_server
 reverse_proxy /api/* {$WALLY_BACKEND_SERVICE}:8000
 reverse_proxy /docs/* {$WALLY_BACKEND_SERVICE}:8000
-reverse_proxy /files/* minio:9000
+reverse_proxy /files/* minio:9000 {
+    header_upstream X-Forwarded-Proto {scheme}
+    header_upstream X-Forwarded-Host {host}
+    header_upstream Host {host}
+}
