--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -3,7 +3,7 @@
 root * /app/src
 file_server
 reverse_proxy /api/* {$WALLY_BACKEND_SERVICE}:8000
-reverse_proxy /docs/* {$WALLY_BACKEND_SERVICE}:8000
+reverse_proxy /docs {$WALLY_BACKEND_SERVICE}:8000
 reverse_proxy /files/* minio:9000 {
     header_upstream X-Forwarded-Proto {scheme}
     header_upstream X-Forwarded-Host {host}
