fix header subdirective

--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -6,8 +6,8 @@ encode gzip
 reverse_proxy /api/* {$WALLY_BACKEND_SERVICE}:8000
 reverse_proxy /docs {$WALLY_BACKEND_SERVICE}:8000
 reverse_proxy /files/* minio:9000 {
-    header X-Forwarded-Proto {scheme}
-    header X-Forwarded-Host {host}
-    header Host {host}
+    header_up X-Forwarded-Proto {scheme}
+    header_up X-Forwarded-Host {host}
+    header_up Host {host}
 }
 try_files {path} /index.html
