--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -1,7 +1,6 @@
 :8080
 
 root * /app/src
-file_server
 encode gzip
 reverse_proxy /api/* {$WALLY_BACKEND_SERVICE}:8000
 reverse_proxy /docs {$WALLY_BACKEND_SERVICE}:8000
@@ -10,4 +9,7 @@ reverse_proxy /files/* minio:9000 {
     header_up X-Forwarded-Host {host}
     header_up Host {host}
 }
-try_files {path} /index.html
+route / {
+    file_server
+    try_files {path} /index.html
+}
