wrap whole config in route

--- a/frontend/Caddyfile
+++ b/frontend/Caddyfile
@@ -2,14 +2,16 @@
 
 root * /app/src
 encode gzip
-reverse_proxy /api/* {$WALLY_BACKEND_SERVICE}:8000
-reverse_proxy /docs {$WALLY_BACKEND_SERVICE}:8000
-reverse_proxy /files/* minio:9000 {
-    header_up X-Forwarded-Proto {scheme}
-    header_up X-Forwarded-Host {host}
-    header_up Host {host}
-}
-route / {
+
+route {
+    reverse_proxy /api/* {$WALLY_BACKEND_SERVICE}:8000
+    reverse_proxy /docs {$WALLY_BACKEND_SERVICE}:8000
+    reverse_proxy /files/* minio:9000 {
+        header_up X-Forwarded-Proto {scheme}
+        header_up X-Forwarded-Host {host}
+        header_up Host {host}
+    }
+
     file_server
     try_files {path} /index.html
 }
