--- a/openshift/frontend.deploy.yaml
+++ b/openshift/frontend.deploy.yaml
@@ -66,8 +66,8 @@ objects:
         metadata:
           annotations:
             openshift.io/generated-by: OpenShiftNewApp
-            prometheus.io/scrape: 'true'
-            prometheus.io/port: '4040'
+            # prometheus.io/scrape: 'true'
+            # prometheus.io/port: '4040'
           creationTimestamp: null
           labels:
             app: wally-${NAME}
@@ -76,51 +76,10 @@ objects:
             name: wally-${NAME}-frontend
         spec:
           volumes:
-          - name: shared-data
-            emptyDir: {}
+          - name: storage-volume
+            persistentVolumeClaim:
+              claimName: wally-${NAME}-frontend
           containers:
-            - image: quay.io/martinhelmich/prometheus-nginxlog-exporter
-              name: nginx-log-exporter
-              livenessProbe:
-                failureThreshold: 3
-                httpGet:
-                  path: /metrics
-                  port: 4040
-                  scheme: HTTP
-                initialDelaySeconds: 3
-                periodSeconds: 10
-                successThreshold: 1
-                timeoutSeconds: 1
-              readinessProbe:
-                failureThreshold: 3
-                httpGet:
-                  path: /metrics
-                  port: 4040
-                  scheme: HTTP
-                initialDelaySeconds: 3
-                periodSeconds: 10
-                successThreshold: 1
-                timeoutSeconds: 1
-              resources:
-                requests:
-                  cpu: 50m
-                  memory: 64Mi
-                limits:
-                  cpu: 50m
-                  memory: 128Mi
-              terminationMessagePath: /dev/termination-log
-              terminationMessagePolicy: File
-              ports:
-                - containerPort: 4040
-                  protocol: TCP
-              volumeMounts:
-              - name: shared-data
-                mountPath: /var/opt/rh/rh-nginx112/log/nginx/
-              # args:
-              # - '-format="$remote_addr - $remote_user [$time_local] \"$request\" $status $body_bytes_sent \"$http_referer\" \"$http_user_agent\" rt=$request_time uct=\"$upstream_connect_time\" uht=\"$upstream_header_time\" urt=\"$upstream_response_time\""'
-              # - '-listen-port=4040'
-              # - '-namespace=nginx'
-              # - '/var/opt/rh/rh-nginx112/log/nginx/access.log'
             - image: >-
                 docker-registry.default.svc:5000/${NAMESPACE}/wally-web:${NAME}
               imagePullPolicy: Always
@@ -141,8 +100,9 @@ objects:
               - name: WALLY_BACKEND_SERVICE
                 value: wally-${NAME}-api
               volumeMounts:
-              - name: shared-data
-                mountPath: /var/opt/rh/rh-nginx112/log/nginx/
+              - name: storage-volume
+                mountPath: /app/src/files/
+                readOnly: true
           dnsPolicy: ClusterFirst
           restartPolicy: Always
           schedulerName: default-scheduler
@@ -169,6 +129,20 @@ objects:
         component: frontend
         name: wally-${NAME}-frontend
       name: wally-${NAME}-frontend
+  - apiVersion: v1
+    kind: PersistentVolumeClaim
+    metadata:
+      labels:
+        app: wally-${NAME}
+        component: frontend
+        name: wally-${NAME}-frontend
+      name: wally-${NAME}-frontend
+    spec:
+      accessModes:
+        - ReadWriteOnce
+      resources:
+        requests:
+          storage: "1Gi"
 kind: Template
 metadata:
   resourceVersion: ''
