clean up caddy config and remove nginx config

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -10,7 +10,7 @@ COPY . .
 
 RUN npm run build
 
-FROM caddy:latest
+FROM caddy:2.0.0-beta.17
 
 WORKDIR /app/src
 COPY --from=build /app/dist/ /app/src
