--- a/openshift/frontend.build.yaml
+++ b/openshift/frontend.build.yaml
@@ -49,7 +49,7 @@ objects:
         dockerStrategy:
           from:
             kind: ImageStreamTag
-            name: 'caddy:latest'
+            name: 'caddy:2.0.0-beta.17'
         type: Docker
       successfulBuildsHistoryLimit: 5
       triggers:
