--- a/backend/api-tests/models.apitest.yaml
+++ b/backend/api-tests/models.apitest.yaml
@@ -33,7 +33,7 @@ requests:
         avg_mm:
           exists: true
   - name: SCSB2016 Test Proof 1 - Stawamus River
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=26&median_elevation=953&glacial_coverage=0&annual_precipitation=3292&evapo_transpiration=668&drainage_area=51&solar_exposure=0.57&average_slope=26"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=26&median_elevation=953&glacial_coverage=0&annual_precipitation=3292&evapo_transpiration=668&drainage_area=51&solar_exposure=0.57&average_slope=26"
     method: get
     expect:
       status: 200
@@ -43,7 +43,7 @@ requests:
           gt: 77
           lt: 79
   - name: SCSB2016 Test Proof 2 - Mashiter Creek
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=26&median_elevation=1096&glacial_coverage=0&annual_precipitation=3304&evapo_transpiration=666&drainage_area=42&solar_exposure=0.67&average_slope=19"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=26&median_elevation=1096&glacial_coverage=0&annual_precipitation=3304&evapo_transpiration=666&drainage_area=42&solar_exposure=0.67&average_slope=19"
     method: get
     expect:
       status: 200
@@ -53,7 +53,7 @@ requests:
           gt: 77
           lt: 79
   - name: SCSB2016 Test Proof 3 - Slesse Creek
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=26&median_elevation=1320&glacial_coverage=0&annual_precipitation=2229&evapo_transpiration=648&drainage_area=165&solar_exposure=0.66&average_slope=31"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=26&median_elevation=1320&glacial_coverage=0&annual_precipitation=2229&evapo_transpiration=648&drainage_area=165&solar_exposure=0.66&average_slope=31"
     method: get
     expect:
       status: 200
@@ -63,7 +63,7 @@ requests:
           gt: 49
           lt: 51
   - name: SCSB2016 Test Proof 4 - Sumas River
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=26&median_elevation=917&glacial_coverage=0&annual_precipitation=2010&evapo_transpiration=701&drainage_area=1617&solar_exposure=0.67&average_slope=23"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=26&median_elevation=917&glacial_coverage=0&annual_precipitation=2010&evapo_transpiration=701&drainage_area=1617&solar_exposure=0.67&average_slope=23"
     method: get
     expect:
       status: 200
@@ -73,7 +73,7 @@ requests:
           gt: 50
           lt: 52
   - name: SCSB2016 Test Proof 5 - Tahumming River
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=26&median_elevation=1363&glacial_coverage=0.15&annual_precipitation=3482&evapo_transpiration=640&drainage_area=255&solar_exposure=0.59&average_slope=37"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=26&median_elevation=1363&glacial_coverage=0.15&annual_precipitation=3482&evapo_transpiration=640&drainage_area=255&solar_exposure=0.59&average_slope=37"
     method: get
     expect:
       status: 200
@@ -83,7 +83,7 @@ requests:
           gt: 97
           lt: 99
   - name: SCSB2016 Test Proof 6 - Lillooet River
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=26&median_elevation=1528&glacial_coverage=0.1&annual_precipitation=1972&evapo_transpiration=640&drainage_area=5543&solar_exposure=0.63&average_slope=28"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=26&median_elevation=1528&glacial_coverage=0.1&annual_precipitation=1972&evapo_transpiration=640&drainage_area=5543&solar_exposure=0.63&average_slope=28"
     method: get
     expect:
       status: 200
@@ -93,7 +93,7 @@ requests:
           gt: 54
           lt: 56
   - name: SCSB2016 Test Proof 7 - Millar Creek
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=25&median_elevation=1694&glacial_coverage=0.24&annual_precipitation=2388&evapo_transpiration=609&drainage_area=77&solar_exposure=0.59&average_slope=24"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=25&median_elevation=1694&glacial_coverage=0.24&annual_precipitation=2388&evapo_transpiration=609&drainage_area=77&solar_exposure=0.59&average_slope=24"
     method: get
     expect:
       status: 200
@@ -103,7 +103,7 @@ requests:
           gt: 41
           lt: 43
   - name: SCSB2016 Test Proof 8 - Meslilloet Creek
-    url: "{{host}}/api/v1/scsb2016?hydrological_zone=27&median_elevation=1042&glacial_coverage=0.02&annual_precipitation=4098&evapo_transpiration=659&drainage_area=40&solar_exposure=0.62&average_slope=25"
+    url: "{{host}}/api/v1/scsb2016/?hydrological_zone=27&median_elevation=1042&glacial_coverage=0.02&annual_precipitation=4098&evapo_transpiration=659&drainage_area=40&solar_exposure=0.62&average_slope=25"
     method: get
     expect:
       status: 200
